# projectify

./: .editorconfig  .env.example  .env.production-sample  .env.template  .env.test  .env.test-collectstatic  .envrc  .eslintrc.cjs  .gitignore  .prettierrc  AUTHORS.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  Caddyfile  LICENSE  Pipfile  Pipfile-tools  Procfile  README.md  SECURITY.md  TODO  TODO.md  TODO.org  ansible.cfg  build-projectify-bundle.nix  build-tailwind-deps.nix  conftest.py  docker-compose.yaml  flake.nix  gunicorn.conf.py  heroku.yml  knip.ts  manage.py  netlify.toml  package-lock.json  package.json  postcss.config.cjs  projectify-celery.Dockerfile  projectify-frontend.Dockerfile  projectify-manage.Dockerfile  (+17 more)
backend/: .env.production-sample  .env.template  .envrc  Procfile  README.md  TODO.md  build-projectify-bundle.nix  build-tailwind-deps.nix  flake.nix  gunicorn.conf.py  manage.py  projectify-backend.Dockerfile  projectify-celery.Dockerfile  projectify-manage.Dockerfile  pyproject.toml  requirements.txt  result-static  whitelist.py
backend/configurations/: __init__.py  decorators.py  management.py  values.py
backend/docs/: postgresql.md  services.md  unused-code.md
backend/mypy/stubs/channels/: auth.pyi  consumer.pyi  db.pyi  layers.pyi  middleware.pyi  routing.pyi  testing.pyi
backend/mypy/stubs/configurations/: __init__.pyi  asgi.pyi  base.pyi  management.pyi
backend/mypy/stubs/django_ratelimit/: __init__.pyi  core.pyi  decorators.pyi
backend/mypy/stubs/dotenv/: __init__.pyi
backend/mypy/stubs/rest_framework/: decorators.pyi  exceptions.pyi  fields.pyi  parsers.pyi  permissions.pyi  relations.pyi  request.pyi  response.pyi  serializers.pyi  test.pyi  urlpatterns.pyi  views.pyi
backend/mypy/stubs/rules/: __init__.pyi
backend/projectify/: __init__.py  asgi.py  celery.py  conftest.py  context_processors.py  exception_handler.py  middleware.py  redis_helper.py  storage.py  urls.py  utils.py  wsgi.py
backend/projectify/admin/: admin.py  apps.py
backend/projectify/blog/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py
backend/projectify/blog/migrations/: 0001_initial.py  0002_remove_postimage_post_delete_post_delete_postimage.py
backend/projectify/components/: __init__.py  pbutton.html
backend/projectify/corporate/: __init__.py  admin.py  apps.py  rules.py  serializers.py  types.py  urls.py
backend/projectify/corporate/lib/: __init__.py  stripe.py
backend/projectify/corporate/migrations/: 0001_initial.py  0002_customer_seats_customer_stripe_customer_id_and_more.py  0003_alter_customer_subscription_status.py  0004_alter_customer_subscription_status.py  0005_alter_customer_subscription_status.py  0006_coupon.py  0007_alter_customer_options_customer_created_and_more.py
backend/projectify/corporate/models/: __init__.py  coupon.py  customer.py
backend/projectify/corporate/selectors/: __init__.py  customer.py
backend/projectify/corporate/services/: coupon.py  customer.py  stripe.py
backend/projectify/corporate/test/: conftest.py
backend/projectify/corporate/views/: coupon.py  customer.py  stripe.py
backend/projectify/help/: __init.py__  markdown_en  urls.py  views.py
backend/projectify/help/markdown_en/: basics.md  billing.md  filters.md  keyboard-shortcuts.md  projects.md  roles.md
backend/projectify/help/static/: hero-help.png.license
backend/projectify/help/templates/: help_base.html
backend/projectify/lib/: __init__.py  auth.py  error_schema.py  error_serializer.py  exception_handler.py  forms.py  htmx.py  models.py  schema.py  settings.py  types.py  views.py
backend/projectify/lib/tests/: test_error_schema.py  test_error_serializer.py  test_exception_handler.py
backend/projectify/management/: __init__.py
backend/projectify/management/commands/: generate_favicons.py  seeddb.py  take_screenshots.py
backend/projectify/onboarding/: urls.py  views.py
backend/projectify/onboarding/templates/: onboarding_base.html
backend/projectify/onboarding/tests/: test_views.py
backend/projectify/premail/: __init__.py  apps.py  email.py  emails.py  registry.py  tasks.py  urls.py  views.py
backend/projectify/settings/: base.py  collect_static.py  development.py  development_nix.py  monkeypatch.py  production.py  spectacular.py  test.py  types.py
backend/projectify/static/: REUSE.toml  alpine.min.js  htmx.min.js
backend/projectify/storefront/: __init__.py  urls.py  views.py
backend/projectify/templates/: 500.html  base.html  dashboard_base.html  dashboard_projects.html  well-known-security.txt
backend/projectify/templatetags/: projectify.py
backend/projectify/test/: asgi.py  test_utils.py
backend/projectify/theme/: apps.py
backend/projectify/user/: __init__.py  admin.py  apps.py  dashboard_urls.py  emails.py  serializers.py  testing_urls.py  urls.py
backend/projectify/workspace/: admin.py  apps.py  consumers.py  dashboard_urls.py  emails.py  rules.py  types.py  urls.py
backend/pytest_types/: __init__.py
backend/schema/: schema.yml
frontend/: .env.template  .envrc  .eslintrc.cjs  .gitignore  .loaderrc.js  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  README.md  TODO.org  build-frontend.nix  flake.nix  knip.ts  netlify.toml  package-lock.json  package.json  pyproject.toml  shell.nix  svelte.config.js  tailwind.config.ts  third-party-licenses-vendored.txt  third-party-licenses.txt  tsconfig.json  vite.config.ts
frontend/.circleci/: config.yml
frontend/docs/: api.md  onboarding.md  urls.md  workspace-settings.md
frontend/src/: app.d.ts  app.html  global.d.ts  hooks.server.ts
frontend/src/lib/: app.scss  config.ts  i18n.ts  navigation.ts  pikaday.scss  storybook.ts
frontend/src/lib-stories/: storybook.ts
frontend/src/messages/: en.ts  types.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts
frontend/src/stories/: README.md
frontend/src/types/: marked.d.ts
frontend/static/: humans.txt  robots.txt
frontend/static/.well-known/: security.txt
tools/: README.md  package-lock.json  package.json  pyproject.toml  render.yaml.json
tools/tools/: __init__.py
(+3217 files in other folders)
