[tool.ruff]
line-length=79
extend-select = [
    "I",
    "E",
    "D",
    "C901",
    # TODO add
    # "C",
    "F",
    # TODO add
    # "DJ",
    # TODO add
    # "T20",
    # There are so many more out there, they all look interesting:
    # https://docs.astral.sh/ruff/rules/
]
ignore = [
    # Conflicting with D201
    "D203",
    # Conflicting with D213
    "D212",
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = [
    "django"
]
# third-party = [
#     "asgiref",
#     "channels",
#     "pytest",
#     "rest_framework"
# ]

[tool.mypy]
mypy_path = [
    "mypy/stubs",
]
strict = true
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "whitelist.py",
    ".direnv",
]

# Library imports
[[tool.mypy.overrides]]
module = [
    "cloudinary.*",
    "pgtrigger.*",
]
ignore_missing_imports = true

# Our own modules
[[tool.mypy.overrides]]
module = [
    "premail.tasks",
]
disallow_untyped_decorators = false


[[tool.mypy.overrides]]
module = [
    "workspace.test.test_migrations",
    "premail.test.*",
]
disallow_untyped_defs = false

[tool.pyright]
stubPath = "mypy/stubs"
typeCheckingMode = "strict"
typeshedPath = ""
exclude = [
    ".direnv",
    "**/__pycache__/",
    # TODO consider just removing whitelist.py
    "whitelist.py",
    # Created by django so we don't bother
    "*/migrations/*.py",
    # Missing type stub
    "workspace/test/test_migrations.py",
    # This one is sort of covered by mypy
    "projectify/settings/monkeypatch.py",
    # TODO cloudinary stub
    "projectify/utils.py",
    # TODO django rules stub
    "*/rules.py",
    # TODO write typings
    "premail/views.py",
    "premail/test/test_views.py",
    "premail/test/test_emails.py",
    # pyright doesn't find stripe typings
    "corporate/views/stripe.py",
]
# Mypy doesn't complain about these, so it's fine
reportUnknownParameterType = true
reportPrivateUsage = false
reportIncompatibleVariableOverride = false
reportTypeCommentUsage = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedImport = false

[tool.poetry]
name = "Projectify Backend"
version = "0.1.0"
description = ""
authors = ["Justus Perlwitz <justus@jwpconsulting.net>"]
readme = "README.md"

[tool.poetry.dependencies]
celery = {extras = ["redis"], version = "~5.2.7"}
channels = {version = "~4.0.0", extras = ["daphne"]}
channels-redis = "~4.0.0"
dj-database-url = "~2.1.0"
django = "~4.2.3"
django-anymail = {extras = ["mailgun"], version = "~8.6"}
django-celery-results = "~2.5.0"
django-cloudinary-storage = "~0.3.0"
django-configurations = "^2.4.1"
django-cors-headers = "~3.13.0"
django-extensions = "~3.2.0"
django-pgtrigger = "~4.11.0"
djangorestframework = "^3"
gunicorn = "~20.1.0"
newrelic = "~8"
pillow = "~10.2.0"
psycopg2 = "~2.9.3"
python = "~3.11"
python-dotenv = "~0.20.0"
redis = "~4.5.4"
rules = "~3.3"
stripe = "~3.5.0"
uvicorn = "~0.17.6"
websockets = "~10.3"
whitenoise = "~6.2.0"
faker = "^19.13.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
# Strictly only used for local development
django-debug-toolbar = "~3.5.0"
ipython = "~8.10.0"
pdbpp = "~0.10.3"
ruff = "^0.1.6"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
celery-types = "~0.20.0"
django-test-migrations = "~1.2.0"
django-types = "~0"
mypy = "~1.4.1"
pyright = "~1.1.318"
pytest = "~7.2.1"
pytest-asyncio = "~0.20.3"
pytest-celery = "~0.0.0"
pytest-django = "~4.5.2"
pytest-xdist = {extras = ["psutil"], version = "~3.3.1"}
types-redis = "~4.6.0.5"
types-stripe = "~3.5.2.14"
types-tqdm = "~4.66.0.2"
vulture = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
ignore_decorators = ["@receiver", "@admin.register"]
exclude = [
    "apps.py",
    "conftest.py",
    "settings",
    "migrations",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projectify.settings.test"
DJANGO_CONFIGURATION = "Test"
asyncio_mode = "auto"
junit_family = "xunit1"
filterwarnings = [
    "error",
    # Wait for celery to get kombu upgraded
    "ignore:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning",
    # Some issue with daphne or twisted
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    # Some issue with django-configurations
    "ignore:The USE_DEPRECATED_PYTZ setting:django.utils.deprecation.RemovedInDjango50Warning",
    "ignore:The USE_L10N setting:django.utils.deprecation.RemovedInDjango50Warning",
    "ignore:The CSRF_COOKIE_MASKED transitional setting:django.utils.deprecation.RemovedInDjango50Warning",
    # Again, another issue with djagno-configurations
    # https://github.com/jazzband/django-configurations/issues/367
    "ignore:the imp module is deprecated:DeprecationWarning",
    "ignore:ConfigurationImporter:ImportWarning",
    "ignore:ConfigurationLoader:ImportWarning",
]
