[tool.black]
line-length=79

[tool.isort]
default_section = "FIRSTPARTY"
force_grid_wrap = 1
include_trailing_comma = true
indent = '    '
line_length = 79
lines_after_imports = 2
multi_line_output = 3
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = [
    "toml",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
name = "projectify-frontend"
version = "0.1.0"
description = "Projectify frontend"
authors = ["Justus Perlwitz <justus@jwpconsulting.net>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "~8.1.7"
toml = "~0.10.2"

[tool.poetry.group.dev.dependencies]
black = "~22.6"
flake8 = "~4.0.1"
flake8-black = "~0.3.3"
flake8-docstrings = "~1.6.0"
flake8-isort = "~4.1.1"
ipython = "~8.4.0"
isort = "~5.10.1"
pytest = "~7.1.2"
mypy = "~1.5.1"
types-toml = "~0.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
